// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MovieItem renders correctly with lines classes 1`] = `
<article
  className="movieContainer lines"
  onMouseLeave={[Function]}
>
  <figure
    className="figcaptionBlock"
  >
    <div>
      <img
        alt="Avengers: Endgame"
        src="https://image.tmdb.org/t/p/w1280undefined"
      />
    </div>
    <figcaption>
      <div
        className="movieTitle"
      >
        <button
          href="#"
          onKeyDown={[Function]}
          tabIndex="0"
          type="button"
        >
          <Link
            to={
              Object {
                "pathname": "/films/undefined",
              }
            }
          >
            Avengers: Endgame
          </Link>
        </button>
        <span />
      </div>
      <div
        className="movieGenres"
      >
        <ul>
          <li>
            <button
              onClick={[Function]}
              onKeyDown={[Function]}
              type="button"
              value={12}
            >
              Adventure,
            </button>
          </li>
          <li>
            <button
              onClick={[Function]}
              onKeyDown={[Function]}
              type="button"
              value={878}
            >
              Science
            </button>
          </li>
          <li>
            <button
              onClick={[Function]}
              onKeyDown={[Function]}
              type="button"
              value={28}
            >
              Fiction,
            </button>
          </li>
          <li>
            <button
              onClick={[Function]}
              onKeyDown={[Function]}
              type="button"
            >
              Action
            </button>
          </li>
        </ul>
      </div>
    </figcaption>
  </figure>
  <hoverMovieCard
    fetchVideo={[Function]}
    fullOverwie={false}
    genres={
      Array [
        <li>
          <button
            onClick={[Function]}
            onKeyDown={[Function]}
            type="button"
            value={12}
          >
            Adventure,
          </button>
        </li>,
        <li>
          <button
            onClick={[Function]}
            onKeyDown={[Function]}
            type="button"
            value={878}
          >
            Science
          </button>
        </li>,
        <li>
          <button
            onClick={[Function]}
            onKeyDown={[Function]}
            type="button"
            value={28}
          >
            Fiction,
          </button>
        </li>,
        <li>
          <button
            onClick={[Function]}
            onKeyDown={[Function]}
            type="button"
          >
            Action
          </button>
        </li>,
      ]
    }
    hoverOverwieBlock={[Function]}
    hoverOverwieNone={[Function]}
    id={0}
    movies={Object {}}
    overview="After the devastating events of Avengers: Infinity War, the universe is in ruins due to the efforts of the Mad Titan, Thanos. With the help of remaining allies, the Avengers must assemble once more in order to undo Thanos' actions and restore order to the universe once and for all, no matter what consequences may be in store."
    rate={0}
    title="Avengers: Endgame"
  />
</article>
`;

exports[`MovieItem renders correctly with poster image 1`] = `
<article
  className="movieContainer cards"
  onMouseLeave={[Function]}
>
  <figure
    className="figcaptionBlock"
  >
    <div>
      <img
        alt="Avengers: Endgame"
        src="https://image.tmdb.org/t/p/w300testImagePath"
      />
    </div>
    <figcaption>
      <div
        className="movieTitle"
      >
        <button
          href="#"
          onKeyDown={[Function]}
          tabIndex="0"
          type="button"
        >
          <Link
            to={
              Object {
                "pathname": "/films/undefined",
              }
            }
          >
            Avengers: Endgame
          </Link>
        </button>
        <span />
      </div>
      <div
        className="movieGenres"
      >
        <ul>
          <li>
            <button
              onClick={[Function]}
              onKeyDown={[Function]}
              type="button"
              value={12}
            >
              Adventure,
            </button>
          </li>
          <li>
            <button
              onClick={[Function]}
              onKeyDown={[Function]}
              type="button"
              value={878}
            >
              Science
            </button>
          </li>
          <li>
            <button
              onClick={[Function]}
              onKeyDown={[Function]}
              type="button"
              value={28}
            >
              Fiction,
            </button>
          </li>
          <li>
            <button
              onClick={[Function]}
              onKeyDown={[Function]}
              type="button"
            >
              Action
            </button>
          </li>
        </ul>
      </div>
    </figcaption>
  </figure>
  <hoverMovieCard
    fetchVideo={[Function]}
    fullOverwie={false}
    genres={
      Array [
        <li>
          <button
            onClick={[Function]}
            onKeyDown={[Function]}
            type="button"
            value={12}
          >
            Adventure,
          </button>
        </li>,
        <li>
          <button
            onClick={[Function]}
            onKeyDown={[Function]}
            type="button"
            value={878}
          >
            Science
          </button>
        </li>,
        <li>
          <button
            onClick={[Function]}
            onKeyDown={[Function]}
            type="button"
            value={28}
          >
            Fiction,
          </button>
        </li>,
        <li>
          <button
            onClick={[Function]}
            onKeyDown={[Function]}
            type="button"
          >
            Action
          </button>
        </li>,
      ]
    }
    hoverOverwieBlock={[Function]}
    hoverOverwieNone={[Function]}
    id={0}
    movies={Object {}}
    overview="After the devastating events of Avengers: Infinity War, the universe is in ruins due to the efforts of the Mad Titan, Thanos. With the help of remaining allies, the Avengers must assemble once more in order to undo Thanos' actions and restore order to the universe once and for all, no matter what consequences may be in store."
    rate={0}
    title="Avengers: Endgame"
  />
</article>
`;

exports[`MovieItem renders correctly without poster image 1`] = `
<article
  className="movieContainer undefined"
  onMouseLeave={[Function]}
>
  <figure
    className="figcaptionBlock"
  >
    <div>
      <img
        alt="Avengers: Endgame"
        src="https://api.ballotpedia.org/v3/thumbnail/"
      />
    </div>
    <figcaption>
      <div
        className="movieTitle"
      >
        <button
          href="#"
          onKeyDown={[Function]}
          tabIndex="0"
          type="button"
        >
          <Link
            id={299534}
            to={
              Object {
                "pathname": "/films/299534",
              }
            }
          >
            Avengers: Endgame
          </Link>
        </button>
        <span>
          8.6
        </span>
      </div>
      <div
        className="movieGenres"
      >
        <ul>
          <li>
            <button
              onClick={[Function]}
              onKeyDown={[Function]}
              type="button"
              value={12}
            >
              Adventure,
            </button>
          </li>
          <li>
            <button
              onClick={[Function]}
              onKeyDown={[Function]}
              type="button"
              value={878}
            >
              Science
            </button>
          </li>
          <li>
            <button
              onClick={[Function]}
              onKeyDown={[Function]}
              type="button"
              value={28}
            >
              Fiction,
            </button>
          </li>
          <li>
            <button
              onClick={[Function]}
              onKeyDown={[Function]}
              type="button"
            >
              Action
            </button>
          </li>
        </ul>
      </div>
    </figcaption>
  </figure>
  <hoverMovieCard
    fetchVideo={[Function]}
    fullOverwie={false}
    genres={
      Array [
        <li>
          <button
            onClick={[Function]}
            onKeyDown={[Function]}
            type="button"
            value={12}
          >
            Adventure,
          </button>
        </li>,
        <li>
          <button
            onClick={[Function]}
            onKeyDown={[Function]}
            type="button"
            value={878}
          >
            Science
          </button>
        </li>,
        <li>
          <button
            onClick={[Function]}
            onKeyDown={[Function]}
            type="button"
            value={28}
          >
            Fiction,
          </button>
        </li>,
        <li>
          <button
            onClick={[Function]}
            onKeyDown={[Function]}
            type="button"
          >
            Action
          </button>
        </li>,
      ]
    }
    hoverOverwieBlock={[Function]}
    hoverOverwieNone={[Function]}
    id={299534}
    movies={Object {}}
    overview="After the devastating events of Avengers: Infinity War, the universe is in ruins due to the efforts of the Mad Titan, Thanos. With the help of remaining allies, the Avengers must assemble once more in order to undo Thanos' actions and restore order to the universe once and for all, no matter what consequences may be in store."
    rate={8.6}
    title="Avengers: Endgame"
  />
</article>
`;

exports[`events hoverOverwieBlock 1`] = `
<div
  id="wrapper"
>
  <article
    class="movieContainer undefined"
  >
    <figure
      class="figcaptionNone"
    >
      <div>
        <img
          alt="Avengers: Endgame"
          src="https://api.ballotpedia.org/v3/thumbnail/"
        />
      </div>
      <figcaption>
        <div
          class="movieTitle"
        >
          <button
            href="#"
            tabindex="0"
            type="button"
          >
            <a
              href="/films/299534"
              id="299534"
            >
              Avengers: Endgame
            </a>
          </button>
          <span>
            8.6
          </span>
        </div>
        <div
          class="movieGenres"
        >
          <ul>
            <li>
              <button
                type="button"
                value="12"
              >
                Adventure,
              </button>
            </li>
            <li>
              <button
                type="button"
                value="878"
              >
                Science
              </button>
            </li>
            <li>
              <button
                type="button"
                value="28"
              >
                Fiction,
              </button>
            </li>
            <li>
              <button
                type="button"
              >
                Action
              </button>
            </li>
          </ul>
        </div>
      </figcaption>
    </figure>
    <div
      class="hoverMovie"
    >
      <div
        class="hoverControlNone"
      >
        <label
          for="playTrailer"
          id="299534"
        >
          <input
            class="playTrailer"
            id="299534"
            name="playTrailer"
            type="button"
          />
          Watch Now
        </label>
        <button
          class="showOverwie"
          id="showOverwie"
          type="button"
        >
          View Info
        </button>
      </div>
      <div
        class="hoverOverwie hoverOverwieBlock"
      >
        <button
          class="hoverClose"
          id="closeHover"
          type="button"
        >
          ╳
        </button>
        <div
          class="hoverOverwieTitle"
        >
          <div
            class="hoverOverwieTitleItem"
          >
            <h3>
              Avengers: Endgame
            </h3>
            <ul>
              <li>
                <button
                  type="button"
                  value="12"
                >
                  Adventure,
                </button>
              </li>
              <li>
                <button
                  type="button"
                  value="878"
                >
                  Science
                </button>
              </li>
              <li>
                <button
                  type="button"
                  value="28"
                >
                  Fiction,
                </button>
              </li>
              <li>
                <button
                  type="button"
                >
                  Action
                </button>
              </li>
            </ul>
          </div>
          <div
            class="hoverOverwieTitleItem"
          >
            <p>
              8.6
            </p>
          </div>
        </div>
        <p>
          After the devastating events of Avengers: Infinity War, the universe is in ruins due to the efforts of the Mad Titan, Thanos. With the help of remaining allies, the Avengers must assemble once more in order to undo Thanos' actions and restore order to the universe once and for all, no matter what consequences may be in store.
        </p>
        <button
          id="299534"
          type="button"
        >
          Watch Now
        </button>
      </div>
    </div>
  </article>
</div>
`;

exports[`events hoverOverwieBlock 2`] = `
<div
  id="wrapper"
>
  <article
    class="movieContainer undefined"
  >
    <figure
      class="figcaptionBlock"
    >
      <div>
        <img
          alt="Avengers: Endgame"
          src="https://api.ballotpedia.org/v3/thumbnail/"
        />
      </div>
      <figcaption>
        <div
          class="movieTitle"
        >
          <button
            href="#"
            tabindex="0"
            type="button"
          >
            <a
              href="/films/299534"
              id="299534"
            >
              Avengers: Endgame
            </a>
          </button>
          <span>
            8.6
          </span>
        </div>
        <div
          class="movieGenres"
        >
          <ul>
            <li>
              <button
                type="button"
                value="12"
              >
                Adventure,
              </button>
            </li>
            <li>
              <button
                type="button"
                value="878"
              >
                Science
              </button>
            </li>
            <li>
              <button
                type="button"
                value="28"
              >
                Fiction,
              </button>
            </li>
            <li>
              <button
                type="button"
              >
                Action
              </button>
            </li>
          </ul>
        </div>
      </figcaption>
    </figure>
    <div
      class="hoverMovie"
    >
      <div
        class="hoverControlBlock"
      >
        <label
          for="playTrailer"
          id="299534"
        >
          <input
            class="playTrailer"
            id="299534"
            name="playTrailer"
            type="button"
          />
          Watch Now
        </label>
        <button
          class="showOverwie"
          id="showOverwie"
          type="button"
        >
          View Info
        </button>
      </div>
      <div
        class="hoverOverwie hoverOverwieNone"
      >
        <button
          class="hoverClose"
          id="closeHover"
          type="button"
        >
          ╳
        </button>
        <div
          class="hoverOverwieTitle"
        >
          <div
            class="hoverOverwieTitleItem"
          >
            <h3>
              Avengers: Endgame
            </h3>
            <ul>
              <li>
                <button
                  type="button"
                  value="12"
                >
                  Adventure,
                </button>
              </li>
              <li>
                <button
                  type="button"
                  value="878"
                >
                  Science
                </button>
              </li>
              <li>
                <button
                  type="button"
                  value="28"
                >
                  Fiction,
                </button>
              </li>
              <li>
                <button
                  type="button"
                >
                  Action
                </button>
              </li>
            </ul>
          </div>
          <div
            class="hoverOverwieTitleItem"
          >
            <p>
              8.6
            </p>
          </div>
        </div>
        <p>
          After the devastating events of Avengers: Infinity War, the universe is in ruins due to the efforts of the Mad Titan, Thanos. With the help of remaining allies, the Avengers must assemble once more in order to undo Thanos' actions and restore order to the universe once and for all, no matter what consequences may be in store.
        </p>
        <button
          id="299534"
          type="button"
        >
          Watch Now
        </button>
      </div>
    </div>
  </article>
</div>
`;
